--- a/_includes/data.html
+++ b/_includes/data.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <a href="../data/batch1/Dataset1_First.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
@@ -20,7 +20,7 @@
                 </a>
                 <p class="text-muted"></p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <a href="../data/batch1/Dataset1_First.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
@@ -30,8 +30,8 @@
                 </a>
                 <p class="text-muted"></p>
             </div>
-            <div class="col-md-4">
-                <a href="../data/batch1/Dataset1_First.zip"><span class="fa-stack fa-4x">
+            <div class="col-md-3">
+                <a href="../data/batch3/Dataset3_First.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
@@ -39,21 +39,16 @@
                         <p>Dataset 3</p></h4>
                 </a>
                 <p class="text-muted"></p>
-                <!--<div class="col-md-4">-->
-                <!--<span class="fa-stack fa-4x">-->
-                <!--<i class="fa fa-circle fa-stack-2x text-primary"></i>-->
-                <!--<i class="fa fa-database fa-stack-1x fa-inverse"></i>-->
-                <!--</span>-->
-                <!--<h4 class="service-heading">Dataset 2</h4>-->
-                <!--<p class="text-muted">.</p>-->
-                <!--</div>-->
-                <!--<div class="col-md-4">-->
-                <!--<span class="fa-stack fa-4x">-->
-                <!--<i class="fa fa-circle fa-stack-2x text-primary"></i>-->
-                <!--<i class="fa fa-database fa-stack-1x fa-inverse"></i>-->
-                <!--</span>-->
-                <!--<h4 class="service-heading">Dataset 3</h4>-->
-                <!--<p class="text-muted"></p>-->
+            </div>
+            <div class="col-md-3">
+                <a href="../data/batch3/Dataset3_Participants_1-10.zip"><span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">
+                        <p>Dataset 3, version 2</p></h4>
+                </a>
+                <p class="text-muted"></p>
             </div>
         </div>
     </div>
