--- a/_includes/data.html
+++ b/_includes/data.html
@@ -48,8 +48,10 @@
                     <h4 class="service-heading">
                         <p>Dataset 3, version 2</p></h4>
                 </a>
-                <p class="text-muted"></p>
+                    <p class="text-muted section-subheading">Y/N indicates whether an element in the
+                        participant record matches the corresponding eligibility criteria in the protocol record
+                    </p>
+
             </div>
         </div>
-    </div>
 </section>
