Adding data descriptions

--- a/_includes/data.html
+++ b/_includes/data.html
@@ -16,7 +16,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">
-                        <p>Dataset 1</p></h4>
+                        <p>Eligibility Criteria </p></h4>
                 </a>
                 <p class="text-muted"></p>
             </div>
@@ -26,7 +26,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">
-                        <p>Dataset 2</p></h4>
+                        <p>Participants Data</p></h4>
                 </a>
                 <p class="text-muted"></p>
             </div>
@@ -36,7 +36,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">
-                        <p>Dataset 3</p></h4>
+                        <p>Clinician Matches</p></h4>
                 </a>
                 <p class="text-muted"></p>
             </div>
@@ -46,7 +46,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">
-                        <p>Dataset 3, version 2</p></h4>
+                        <p>Clinician Matches, version 2</p></h4>
                 </a>
                     <p class="text-muted section-subheading">Y/N indicates whether an element in the
                         participant record matches the corresponding eligibility criteria in the protocol record
