Adding more descriptions, getting readu to .gov launch

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,25 +4,65 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">About</h2>
-                <h3 class="section-subheading text-muted">
-                        <p>Federal open data is a key driver for health innovation. In addition to research and
-                            development
-                            dollars, the federal government provides key datasets to startups, academia, and industry.
-                            In this tech sprint, this federal open-data ecosystem is used as a platform for industry to
-                            create value for Americans. Participating tech teams will pilot use of novel federal
-                            open-data datasets designed specifically for this sprint, build tools around them,
-                            and present results at a public “Demo Day” event in 2019 with leadership across agencies.
-                            The results will also provide feedback on the types of dataset creation and design that
-                            federal agencies and others can do to promote use of AI and data in this space, and in
-                            general.
-                    </p>
-                    <p>The Opportunity Project (TOP) is a lightweight
-                        process for engaging the tech industry to
-                        create data-driven digital products that benefit
-                        the public and drive economic activity.
-                    </p>
-                </h3>
             </div>
+            <h3 class="section-subheading text-muted">
+                <p>Federal open data is a key driver for health innovation. In addition to research and
+                    development
+                    dollars, the federal government provides key datasets to startups, academia, and industry.
+                    In this tech sprint, this federal open-data ecosystem is used as a platform for industry to
+                    create value for Americans. Participating tech teams will pilot use of novel federal
+                    open-data datasets designed specifically for this sprint, build tools around them,
+                    and present results at a public “Demo Day” event in 2019 with leadership across agencies.
+                    The results will also provide feedback on the types of dataset creation and design that
+                    federal agencies and others can do to promote use of AI and data in this space, and in
+                    general.
+                </p>
+                <p>The Opportunity Project (TOP) is a lightweight
+                    process for engaging the tech industry to
+                    create data-driven digital products that benefit
+                    the public and drive economic activity.
+                </p>
+            </h3>
+
+            <div class="col-lg-12 text-center">
+                <h3 class="section-heading">Tracks</h3>
+            </div>
+            <ul>
+                <li>
+                    <h4 class="section-subheading">AI Ecosystem</h4>
+                    <p>
+                        Novel therapeutics, such as those under development in clinical trials, are often a
+                        treatment option
+                        for those patients with serious and life threatening diseases such as cancer. Increasing
+                        patient awareness of
+                        clinical trials is believed to be a factor in reducing time for participant recruitment,
+                        a very large cost categories in
+                        clinical trials. Thus, applying AI to help patients find clinical trials studying novel
+                        therapeutics, may have the
+                        potential to improve patient care and, by aiding in recruitment, reduce drug development
+                        costs.
+                        The AI ecosystem project will be piloted by these tech organizations:
+                        Flatiron Health, Microsoft Healthcare, Oracle, Philips (Research),
+                        Rush Medical, and TrialX (in collaboration with the Global Lyme
+                        Alliance).
+                    </p>
+
+                </li>
+                <li>
+                    <h4 class="section-subheading">Lyme Disease</h4>
+                    <p>Lyme disease is a tick-borne bacterial infection that affects more than 300,000 patients
+                        annually in the United States-more Americans than HIV/AIDS and breast cancer combined.
+                        There is no vaccine and an estimated 10-20% of treated Lyme disease patients fail to
+                        recover fully.This work will harness the power of collaboration, citizen science, and
+                        data for Lyme disease. The goal is to create digital tools and data sharing capabilities
+                        for the prevention, education, and science that will support data-driven decisions and
+                        improve public health related to tick-borne disease.
+
+                        The Lyme and tick-borne diseases track will include: TickTracker,
+                        LivLyme Foundation, and Clyme Health.
+                    </p>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
