--- a/_includes/press.html
+++ b/_includes/press.html
@@ -1,26 +1,22 @@
 <!-- Portfolio Grid Section -->
 <section id="press" class="bg-light-gray">
     <div class="container">
+        <div class="col-lg-12 text-center">
+            <h3 class="section-heading">Partners</h3>
+        </div>
+
         <div class="row">
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/clyme.png" class="img-responsive img-centered" alt="">
-                </a>
+               <h4 class="text-muted">Flatiron Health</h4>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/phillips.png" class="img-responsive img-centered" alt="">
-                </a>
+                <h4 class="text-muted">Microsoft Healthcare</h4>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/oracle.png" class="img-responsive img-centered" alt="">
-                </a>
+                <h4 class="text-muted"> Oracle</h4>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/rush.png" class="img-responsive img-centered" alt="">
-                </a>
+                <h4 class="text-muted">Philips (Research)</h4>
             </div>
 
 
@@ -28,23 +24,21 @@
 
         <div class="row">
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/flatiron.png" class="img-responsive img-centered" alt="">
-                </a>
+                <h4 class="text-muted"> Rush Medical</h4>
             </div>
             <div class="col-md-3 col-sm-6">
-
+                <h4 class="text-muted"> LivLyme Foundation</h4>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/microsof.png" class="img-responsive img-centered" alt="">
-                </a>
+                <h4 class="text-muted">TrialX <p>(in collaboration with the Global Lyme
+                    Alliance)</p></h4>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="img/logos/ornl.png" class="img-responsive img-centered" alt="">
-                </a>
+                <h4 class="text-muted">TickTracker</h4>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h4 class="text-muted">Clyme Health</h4>
             </div>
         </div>
-    </div>
+    </section>
 
