--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
- <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "/js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
+ <!-- jQuery Version 3.3.1 -->
+    <script src="{{ "/js/jquery-3.3.1.min.js" | prepend: site.baseurl }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
