Adding about section button and updated test

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,64 +5,36 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">About</h2>
             </div>
-            <h3 class="section-subheading text-muted">
-                <p>Federal open data is a key driver for health innovation. In addition to research and
-                    development
-                    dollars, the federal government provides key datasets to startups, academia, and industry.
-                    In this tech sprint, this federal open-data ecosystem is used as a platform for industry to
-                    create value for Americans. Participating tech teams will pilot use of novel federal
-                    open-data datasets designed specifically for this sprint, build tools around them,
-                    and present results at a public “Demo Day” event in 2019 with leadership across agencies.
-                    The results will also provide feedback on the types of dataset creation and design that
-                    federal agencies and others can do to promote use of AI and data in this space, and in
-                    general.
+            <h3 class="section-subheading">
+                <p>With the HHS Office of the Chief Technology Officer (CTO), Presidential Innovation Fellows (PIF) jointly pioneered the health tech sprint,
+                    "TOP Health," that chose 10 teams delivering digital tools — built with open federal data and emerging technologies like Artificial Intelligence (AI)
+                    — to improve clinical trials, experimental therapies, and data-driven solutions for complex challenges from cancer to Lyme and tick-borne diseases.
+                    The teams ranged from two international teams (i.e. Microsoft Healthcare and Philips Research) to one originally at a medical
+                    center that officially spun out into a new company specifically based on the AI clinical trial search tool developed during the sprint.
+                    It included physicians and patient advocates as well as data stewards and experts in the relevant domain areas from within government.
+
                 </p>
-                <p>The Opportunity Project (TOP) is a lightweight
-                    process for engaging the tech industry to
-                    create data-driven digital products that benefit
-                    the public and drive economic activity.
+                <p> The project drew on resources across over a dozen federal agencies/departments including:
+                    Department of Veterans Affairs (VA), United States Patent and Trademark Office (USPTO), National Cancer Institute (NCI),
+                    General Services Administration (GSA), Department of Health and Human Services (HHS), Department of Commerce (DOC)/Census Bureau,
+                    National Institutes of Health (NIH)/National Library of Medicine (NLM), Food and Drug Administration (FDA),
+                    Consumer Financial Protection Bureau (CFPB), Department of Defense (DOD), Centers for Medicare and Medicaid Services (CMS),
+                    Department of Housing and Urban Development (HUD), Department of Energy (DOE), The White House Office of Management and Budget (OMB).
+                    This project represents one of the first instances of a new program that led to new open federal data via machine readable information as defined per
+                    the newly signed "OPEN Government Data Act" under the "Foundations for Evidence-based Policymaking Act" (signed Jan 15, 2019).
+                    A final demo day will take place on March 1 with cross-agency leadership .
+
+                </p>
+                <p>For more information on:
+                    <p>Sprint results:</p>
+                <a href="https://www.hhs.gov/cto/blog/2019/1/17/top-health-tech-sprint-unleashes-the-power-of-open-data-and-ai.html">https://www.hhs.gov/cto/blog/2019/1/17/top-health-tech-sprint-unleashes-the-power-of-open-data-and-ai.html</a>
+                </p>
+                <p>
+                    <p>Sprint participants:</p>
+                <a href="https://digital.gov/2018/11/02/health-tech-sprint-aims-at-improving-care-access-experience/">https://digital.gov/2018/11/02/health-tech-sprint-aims-at-improving-care-access-experience</a>
                 </p>
             </h3>
 
-            <div class="col-lg-12 text-center">
-                <h3 class="section-heading">Tracks</h3>
-            </div>
-            <ul>
-                <li>
-                    <h4 class="section-subheading">AI Ecosystem</h4>
-                    <p>
-                        Novel therapeutics, such as those under development in clinical trials, are often a
-                        treatment option
-                        for those patients with serious and life threatening diseases such as cancer. Increasing
-                        patient awareness of
-                        clinical trials is believed to be a factor in reducing time for participant recruitment,
-                        a very large cost categories in
-                        clinical trials. Thus, applying AI to help patients find clinical trials studying novel
-                        therapeutics, may have the
-                        potential to improve patient care and, by aiding in recruitment, reduce drug development
-                        costs.
-                        The AI ecosystem project will be piloted by these tech organizations:
-                        Flatiron Health, Microsoft Healthcare, Oracle, Philips (Research),
-                        Rush Medical, and TrialX (in collaboration with the Global Lyme
-                        Alliance).
-                    </p>
-
-                </li>
-                <li>
-                    <h4 class="section-subheading">Lyme Disease</h4>
-                    <p>Lyme disease is a tick-borne bacterial infection that affects more than 300,000 patients
-                        annually in the United States-more Americans than HIV/AIDS and breast cancer combined.
-                        There is no vaccine and an estimated 10-20% of treated Lyme disease patients fail to
-                        recover fully.This work will harness the power of collaboration, citizen science, and
-                        data for Lyme disease. The goal is to create digital tools and data sharing capabilities
-                        for the prevention, education, and science that will support data-driven decisions and
-                        improve public health related to tick-borne disease.
-
-                        The Lyme and tick-borne diseases track will include: TickTracker,
-                        LivLyme Foundation, and Clyme Health.
-                    </p>
-                </li>
-            </ul>
-        </div>
+          </div>
     </div>
 </section>
