--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,15 +14,9 @@
                     It included physicians and patient advocates as well as data stewards and experts in the relevant domain areas from within government.
 
                 </p>
-                <p> The project drew on resources across over a dozen federal agencies/departments including:
-                    Department of Veterans Affairs (VA), United States Patent and Trademark Office (USPTO), National Cancer Institute (NCI),
-                    General Services Administration (GSA), Department of Health and Human Services (HHS), Department of Commerce (DOC)/Census Bureau,
-                    National Institutes of Health (NIH)/National Library of Medicine (NLM), Food and Drug Administration (FDA),
-                    Consumer Financial Protection Bureau (CFPB), Department of Defense (DOD), Centers for Medicare and Medicaid Services (CMS),
-                    Department of Housing and Urban Development (HUD), Department of Energy (DOE), The White House Office of Management and Budget (OMB).
-                    This project represents one of the first instances of a new program that led to new open federal data via machine readable information as defined per
+                <p> The project drew on resources across over a dozen federal agencies and departments. This project represents one of the first instances of a new program that led to new open federal data via machine readable information as defined per
                     the newly signed "OPEN Government Data Act" under the "Foundations for Evidence-based Policymaking Act" (signed Jan 15, 2019).
-                    A final demo day will take place on March 1 with cross-agency leadership .
+                    A final demo day will take place on March 1 with cross-agency leadership.
 
                 </p>
                 <p>For more information on:
@@ -34,6 +28,42 @@
                 <a href="https://digital.gov/2018/11/02/health-tech-sprint-aims-at-improving-care-access-experience/">https://digital.gov/2018/11/02/health-tech-sprint-aims-at-improving-care-access-experience</a>
                 </p>
             </h3>
+
+
+            <div class="col-lg-12 text-center">
+                <h3 class="section-heading">Tracks</h3>
+            </div>
+            <ul>
+                <li>
+                    <h4 class="section-subheading">AI Ecosystem</h4>
+                    <h6 class="text-muted">Contact: Gil Alterovitz</h6>
+                    <p>
+                        Novel therapeutics, such as those under development in clinical trials, are often a
+                        treatment option
+                        for those patients with serious and life threatening diseases such as cancer. Increasing
+                        patient awareness of
+                        clinical trials is believed to be a factor in reducing time for participant recruitment,
+                        a very large cost categories in
+                        clinical trials. Thus, applying AI to help patients find clinical trials studying novel
+                        therapeutics, may have the
+                        potential to improve patient care and, by aiding in recruitment, reduce drug development
+                        costs.
+                    </p>
+
+                </li>
+                <li>
+                    <h4 class="section-subheading">Lyme Disease</h4>
+                    <h6 class="text-muted">Contact: Kristin Honey</h6>
+                    <p>Lyme disease is a tick-borne bacterial infection that affects more than 300,000 patients
+                        annually in the United States-more Americans than HIV/AIDS and breast cancer combined.
+                        There is no vaccine and an estimated 10-20% of treated Lyme disease patients fail to
+                        recover fully.This work will harness the power of collaboration, citizen science, and
+                        data for Lyme disease. The goal is to create digital tools and data sharing capabilities
+                        for the prevention, education, and science that will support data-driven decisions and
+                        improve public health related to tick-borne disease
+                    </p>
+                </li>
+            </ul>
 
           </div>
     </div>
