--- a/_includes/data.html
+++ b/_includes/data.html
@@ -6,11 +6,12 @@
                 <h2 class="section-heading">Data</h2>
                 <h3 class="section-subheading text-muted">Github repository/data/code will be made available and updated
                     <a
-                            href="https://github.com/tophealth/tophealth.github.io/tree/master/data">here</a>.</h3>
+                            href="https://github.com/presidential-innovation-fellows/tophealth/tree/master/data">here</a>.
+                </h3>
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <a href="../data/batch1/Dataset1_First.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
@@ -20,7 +21,7 @@
                 </a>
                 <p class="text-muted"></p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <a href="../data/batch1/Dataset2_First.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
@@ -30,7 +31,7 @@
                 </a>
                 <p class="text-muted"></p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <a href="../data/batch3/Dataset3_First.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
@@ -40,7 +41,11 @@
                 </a>
                 <p class="text-muted"></p>
             </div>
-            <div class="col-md-3">
+            <hr>
+        </div>
+
+        <div class="row text-center">
+            <div class="col-md-4">
                 <a href="../data/batch3/Dataset3_Participants_1-10.zip"><span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
@@ -48,10 +53,24 @@
                     <h4 class="service-heading">
                         <p>Clinician Matches, version 2</p></h4>
                 </a>
-                    <p class="text-muted section-subheading">Y/N indicates whether an element in the
-                        participant record matches the corresponding eligibility criteria in the protocol record
-                    </p>
+                <p class="text-muted section-subheading">Y/N indicates whether an element in the
+                    participant record matches the corresponding eligibility criteria in the protocol record
+                </p>
 
             </div>
+            <!--<div class="col-md-4">-->
+                <!--<a href="../data/batch3/Dataset3_v3.zip"><span class="fa-stack fa-4x">-->
+                        <!--<i class="fa fa-circle fa-stack-2x text-primary"></i>-->
+                        <!--<i class="fa fa-database fa-stack-1x fa-inverse"></i>-->
+                    <!--</span>-->
+                    <!--<h4 class="service-heading">-->
+                        <!--<p>Clinician Matches, version 3</p></h4>-->
+                <!--</a>-->
+                <!--<p class="text-muted section-subheading">This version adds additional curation (in yellow) for criteria matches-->
+                    <!--which docs did not use in the matching- but can help the AI learn.-->
+                <!--</p>-->
+
+            <!--</div>-->
+
         </div>
 </section>
