Adding journey book and Davar as team member

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% include data.html %}
     {% include timeline.html %}
     {% include team.html %}
+    {% include journey.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
