--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,9 @@
                 <li>
                     <a class="page-scroll" href="#team">Team</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#journey">Journey</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
