Adding team members and journey books

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,9 @@
                 <li>
                     <a class="page-scroll" href="#journey">Journey</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#ecosystem">AI Ecosystem</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
