--- a/_includes/journey.html
+++ b/_includes/journey.html
@@ -1,13 +1,16 @@
-<div id=" journey">
+<section id=" journey">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Journey</h2>
+                <h3 class="section-subheading text-muted">This JourneyBook reflects learnings from
+                    the AI challenge side
+                </h3>
             </div>
         </div>
         <div class="row">
-            <iframe src="../img/Journeybook.pdf" width="100%" height="700px"></iframe>
+            <iframe src="../img/ai_journey_book.pdf" width="100%" height="700px"></iframe>
         </div>
     </div>
 
-</div>
+</section>
