--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     {% include timeline.html %}
     {% include team.html %}
     {% include journey.html %}
+    {% include ecosystem.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
