--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,9 @@
             {% for member in site.people %}
             <div class="col-sm-3">
                 <div class="team-member">
-                    <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                    <div>
+                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                    </div>
                     <h4>{{ member.name }}</h4>
                     <p class="text-muted">{{ member.position }}</p>
                     <ul class="list-inline social-buttons">
