Adding 'former fed' label to Ardalan

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,6 +30,7 @@
             </div>
             {% endfor %}
         </div>
+        <div>* Former Federal employee</div>
 
     </div>
 </section>
